# hitl-mcp-cli

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPERT_PANEL_REVIEW.md  IMPROVEMENTS.md  MULTI_AGENT_COORDINATION_DESIGN.md  MULTI_AGENT_DESIGN_NOTES.md  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  coverage.json  example.py  mcp-config.example.json  pyproject.toml  test_enhancements.py
.amazonq/rules/memory-bank/: documentation.md
.claude/: INITIALIZATION_SUMMARY.md  mcp-setup.md  rules.md  settings.json
.claude/commands/: deploy.md  docs.md  lint.md  review.md  security.md  test.md
.claude/hooks/: session_start.sh  user_prompt_submit.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  FUTURE.md  MULTI_AGENT_COORDINATION.md  TESTING.md  generate_visuals.py
hitl_mcp_cli/: __init__.py  cli.py  server.py
hitl_mcp_cli/coordination/: __init__.py  auth.py  channels.py  client.py  heartbeat.py  locks.py  metrics.py  ratelimit.py  resources.py  schema.py  signing.py  tools.py  tools_enhanced.py  tracing.py
hitl_mcp_cli/ui/: __init__.py  banner.py  coordination_display.py  feedback.py  prompts.py  request_queue.py
tests/: test_cli.py  test_cli_integration.py  test_edge_cases.py  test_error_handling.py  test_feedback.py  test_fuzzy_search.py  test_mcp_integration.py  test_multiline_terminal.py  test_prompts.py  test_selection_regression.py  test_server.py  test_timeout_handling.py  test_ui.py
tests/coordination/: __init__.py  test_auth.py  test_channels.py  test_end_to_end.py  test_heartbeat.py  test_integration.py  test_locks.py  test_performance.py  test_ratelimit.py  test_signing.py
tests/ui/: test_request_queue.py
