[project]
name = "hitl-mcp-cli"
version = "0.1.0"
description = "Human-in-the-loop MCP server for interactive AI agent workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Andrew Crozier", email = "geehexx@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "ai", "agent", "interactive", "human-in-the-loop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.13.0",
    "inquirerpy>=0.3.4",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.2",
    "pytest-cov>=7.0",
    "mypy>=1.18",
    "black>=25.9",
    "isort>=7.0",
    "ruff>=0.14",
]

[project.scripts]
hitl-mcp = "hitl_mcp_cli.cli:main"

[project.urls]
Homepage = "https://github.com/geehexx/hitl-mcp-cli"
Repository = "https://github.com/geehexx/hitl-mcp-cli"
Issues = "https://github.com/geehexx/hitl-mcp-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["hitl_mcp_cli"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --cov=hitl_mcp_cli --cov-report=term-missing"
asyncio_mode = "auto"
